--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "file-saver": "^2.0.2",
     "konva": "^4.0.18",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
