Add Nibe Uplink data collection

--- a/functions/.env.example
+++ b/functions/.env.example
@@ -5,3 +5,7 @@ MAIL_USERNAME=XXXXXXX
 MAIL_TO=XXXXXXX;YYYYYYY
 MAIL_PASSWORD=XXXXXXX
 FOOD_RECOMMENDER_BUCKET_NAME=XXXXXXX
+HOME_DATA_BUCKET_NAME=XXXXXXX
+NIBE_HPID=XXXXXXX
+NIBE_EMAIL=XXXXXXX
+NIBE_PASSWORD=XXXXXXX
