--- a/ui/package.json
+++ b/ui/package.json
@@ -10,33 +10,33 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^3.4.3",
-    "file-saver": "^2.0.2",
+    "core-js": "^3.23.4",
+    "file-saver": "^2.0.5",
     "konva": "^4.0.18",
-    "lodash": "^4.17.15",
-    "moment": "^2.24.0",
-    "vue": "^2.6.10",
-    "vue-konva": "^2.1.1",
-    "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "vue": "^2.7.5",
+    "vue-konva": "^2.1.7",
+    "vue-router": "^3.5.4",
+    "vuetify": "^2.6.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-plugin-babel": "^4.5.19",
+    "@vue/cli-plugin-eslint": "^4.5.19",
+    "@vue/cli-plugin-router": "^4.5.19",
+    "@vue/cli-plugin-vuex": "^4.5.19",
+    "@vue/cli-service": "^4.5.19",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.3",
-    "sass": "^1.19.0",
+    "sass": "~1.32.13",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vue-cli-plugin-vuetify": "^2.5.1",
+    "vue-template-compiler": "^2.7.5",
+    "vuetify-loader": "^1.9.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
