--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Development - Backend (Windows)",
-            "type": "shell",
-            "command": "./scripts/run-backend-functions.ps1"
-        },
-        {
-            "label": "Development - Backend (Darwin)",
+            "label": "Development - Backend",
             "type": "shell",
             "command": "source ./scripts/run-backend-functions.sh"
         },
@@ -19,22 +14,12 @@
             "command": "source ~/.zshrc && cd ui && npm run serve"
         },
         {
-            "label": "Deploy - Backend function (Windows)",
+            "label": "Deploy - Backend function",
             "type": "shell",
-            "command": "gcloud functions deploy ${input:name} --runtime python37 --trigger-http --allow-unauthenticated --memory ${input:memory} --source ${workspaceFolder}\\functions\\${input:name} --region europe-west1 --max-instances ${input:max-instances} --timeout ${input:timeout} --set-env-vars $(Get-Content ./functions/.env.production -ReadCount 100 | ForEach{$_ -Join ','})"
+            "command": "source ~/.zshrc && gcloud functions deploy ${input:name} --runtime python310 --trigger-http --allow-unauthenticated --memory ${input:memory} --source ${workspaceFolder}/functions/${input:name} --region europe-west1 --max-instances ${input:max-instances} --timeout ${input:timeout} --set-env-vars \"$(paste -d, -s ./functions/.env.production)\""
         },
         {
-            "label": "Deploy - Backend function (Darwin)",
-            "type": "shell",
-            "command": "source ~/.zshrc && gcloud functions deploy ${input:name} --runtime python37 --trigger-http --allow-unauthenticated --memory ${input:memory} --source ${workspaceFolder}/functions/${input:name} --region europe-west1 --max-instances ${input:max-instances} --timeout ${input:timeout} --set-env-vars \"$(paste -d, -s ./functions/.env.production)\""
-        },
-        {
-            "label": "Deploy - UI (Windows)",
-            "type": "shell",
-            "command": "cd ui; npm run deploy",
-        },
-        {
-            "label": "Deploy - UI (Darwin)",
+            "label": "Deploy - UI",
             "type": "shell",
             "command": "source ~/.zshrc && cd ui && npm run deploy",
         }
