Several UI & API updates

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ notebooks/*
 .vscode/launch.json
 .vscode/settings.json
 *.code-workspace
+TODO
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
