--- a/ui/package.json
+++ b/ui/package.json
@@ -3,40 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode=local",
-    "build": "vue-cli-service build --mode=production",
-    "deploy": "vue-cli-service build --mode=production && gsutil rsync -r dist gs://jmyrberg && gsutil web set -m index.html -e 404.html gs://jmyrberg && gsutil setmeta -h \"Content-Type:text/html\" -h \"Cache-Control:no-cache, max-age=0, no-transform\" gs://jmyrberg/*.html",
-    "lint": "vue-cli-service lint"
+    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --mode=local",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build --mode=production",
+    "lint": "vue-cli-service lint",
+    "deploy": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build --mode=production && cd dist && gsutil -m cp -z js,map,css,html,svg,json -r ./ gs://jmyrberg && cd .. && gsutil web set -m index.html -e 404.html gs://jmyrberg",
+    "reset-index-cache": "gsutil setmeta -h \"Content-Type:text/html\" -h \"Cache-Control:no-cache, max-age=0, no-transform\" gs://jmyrberg/index.html"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.23.4",
+    "axios": "^0.27.2",
+    "core-js": "^3.25.3",
     "file-saver": "^2.0.5",
+    "gm": "^1.25.0",
     "konva": "^4.0.18",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "vue": "^2.7.5",
+    "vue": "^2.7.10",
     "vue-konva": "^2.1.7",
-    "vue-router": "^3.5.4",
-    "vuetify": "^2.6.7",
+    "vue-router": "^3.6.5",
+    "vuetify": "^2.6.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.19",
-    "@vue/cli-plugin-eslint": "^4.5.19",
+    "@vue/cli-plugin-babel": "~4.5.9",
+    "@vue/cli-plugin-eslint": "~4.5.9",
     "@vue/cli-plugin-router": "^4.5.19",
     "@vue/cli-plugin-vuex": "^4.5.19",
-    "@vue/cli-service": "^4.5.19",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^9.4.3",
+    "@vue/cli-service": "^3.12.1",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^9.5.1",
+    "lint-staged": "^13.0.3",
     "sass": "~1.32.13",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.5.1",
-    "vue-template-compiler": "^2.7.5",
-    "vuetify-loader": "^1.9.1"
+    "vue-cli-plugin-compression": "~1.2.0",
+    "vue-cli-plugin-vuetify": "^2.5.8",
+    "vue-cli-plugin-webpack-bundle-analyzer": "~4.0.0",
+    "vue-template-compiler": "^2.7.10",
+    "vuetify-loader": "^1.9.2",
+    "webpack": "^4.42.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
