--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,22 +6,27 @@
         {
             "label": "Development - Backend",
             "type": "shell",
-            "command": "source ./scripts/run-backend-functions.sh"
+            "command": "source ~/.zshrc && source ./scripts/run-backend-functions.sh"
         },
         {
             "label": "Development - UI",
             "type": "shell",
-            "command": "source ~/.zshrc && cd ui && npm run serve"
+            "command": "cd ui && npm run serve"
         },
         {
-            "label": "Deploy - Backend function",
+            "label": "Deploy - Backend function (one)",
             "type": "shell",
-            "command": "source ~/.zshrc && gcloud functions deploy ${input:name} --runtime python310 --trigger-http --allow-unauthenticated --memory ${input:memory} --source ${workspaceFolder}/functions/${input:name} --region europe-west1 --max-instances ${input:max-instances} --timeout ${input:timeout} --set-env-vars \"$(paste -d, -s ./functions/.env.production)\""
+            "command": "gcloud functions deploy ${input:name} --runtime python310 --trigger-http --allow-unauthenticated --memory ${input:memory} --source ${workspaceFolder}/functions/${input:name} --region europe-west1 --max-instances ${input:max-instances} --timeout ${input:timeout} --set-env-vars \"$(paste -d, -s ./functions/.env.production)\""
+        },
+        {
+            "label": "Deploy - Backend function (all)",
+            "type": "shell",
+            "command": "source scripts/deploy-backend.sh"
         },
         {
             "label": "Deploy - UI",
             "type": "shell",
-            "command": "source ~/.zshrc && cd ui && npm run deploy",
+            "command": "source scripts/deploy-ui.sh",
         }
     ],
     "inputs": [
