--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "reset-index-cache": "gsutil setmeta -h \"Content-Type:text/html\" -h \"Cache-Control:no-cache, max-age=0, no-transform\" gs://jmyrberg/index.html"
   },
   "dependencies": {
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "core-js": "^3.25.3",
     "file-saver": "^2.0.5",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "vue": "^2.7.10",
+    "vue-apexcharts": "^1.6.2",
     "vue-konva": "^2.1.7",
     "vue-router": "^3.6.5",
     "vuetify": "^2.6.10",
