Add more memory options in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,7 +41,7 @@
             "id": "memory",
             "description": "Memory allocated for the function",
             "default": "128MB",
-            "options": ["128MB", "256MB", "512MB", "1024MB", "2048MB"]
+            "options": ["128MB", "256MB", "512MB", "1024MB", "2048MB", "4096MB", "8192MB"]
         },
         {
             "type": "pickString",
