--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.7.10",
     "vue-apexcharts": "^1.6.2",
     "vue-konva": "^2.1.7",
+    "vue-meta": "^2.4.0",
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^3.6.5",
     "vuetify": "^2.6.10",
